--------------------------------------------------------------------------
Ani 2.3 - 8 October 2012

New
+ Introduced new callback feature "onDelayEnd" 
+ examples/Ani_Callback_Delay_End
  
--------------------------------------------------------------------------
Ani 2.2 - 19 April 2012

New
+ examples/Ani_Workaround_Android 
  Thanks LimeJuice for the reminder to find a workaround for this old issue!

Changes
* AniCore. Reading and updating the target variable is now more efficient.
  No updating until after durationDelay has passed. Thanks to Slight Ic
  for the code snippet!

--------------------------------------------------------------------------
Ani 2.1 - 6 January 2012

Fixes
* Easing styles Ani.CUBIC_IN_OUT and Ani.CUBIC_OUT fixed. Now they are 
  what their name says. Thank you Jean-Francois Renaud for reporting!

New
+ examples/Ani_Sequence_Loop
+ examples/Ani_in_Classes_Bang

--------------------------------------------------------------------------
Ani 2.0 - 27 September 2011

New
+ Possibility to have custom easings, based on greensock's customease 
  class, see http://www.greensock.com/customease/
+ examples/Ani_Easing_Custom
  
Changes
* Refactoring of all easing parameters from type 'String' to type 'Easing'
  
--------------------------------------------------------------------------
Ani 1.3 - 1 August 2011

New
+ library.properties
  fix compatibility for the upcoming processing 2.0

--------------------------------------------------------------------------
Ani 1.2 - 9 June 2010

Performance improvement "under the hood" in AniCore: 
The updatePosition() function use no longer the java reflection 
mechanism ... which is good.


--------------------------------------------------------------------------
Ani 1.1 - 8 June 2010

New Demos
+ collage space
+ valentine drips player and recorder

New functions
+ Ani.killAll()
  Stops and kills all references to ongoing animations
+ AniUtil.shortRotation()