@@ -36,7 +36,7 @@ paragraph =
 # is used to compare different versions of the same library, and
 # check if an update is available. You should think of it as a
 # counter, counting the total number of releases you've had.
-version = 5  # This must be parsable as an int
+version = 6  # This must be parsable as an int
 
 # The version as the user will see it. If blank, the version attribute will be used here
-prettyVersion = 2.3  # This is treated as a String
+prettyVersion = 2.4  # This is treated as a String
