@@ -2,12 +2,12 @@
 <!--NewPage-->
 <HTML>
 <HEAD>
-<!-- Generated by javadoc (build 1.6.0_35) on Mon Oct 08 14:46:44 BST 2012 -->
+<!-- Generated by javadoc (build 1.6.0_35) on Fri Oct 19 09:22:16 BST 2012 -->
 <TITLE>
 Constant Field Values (Javadocs: Ani)
 </TITLE>
 
-<META NAME="date" CONTENT="2012-10-08">
+<META NAME="date" CONTENT="2012-10-19">
 
 <LINK REL ="stylesheet" TYPE="text/css" HREF="stylesheet.css" TITLE="Style">
 
@@ -195,7 +195,7 @@ de.looksgood.*</FONT></TH>
 <A NAME="de.looksgood.ani.AniConstants.VERSION"><!-- --></A><TD ALIGN="right"><FONT SIZE="-1">
 <CODE>public&nbsp;static&nbsp;final&nbsp;java.lang.String</CODE></FONT></TD>
 <TD ALIGN="left"><CODE><A HREF="de/looksgood/ani/AniConstants.html#VERSION">VERSION</A></CODE></TD>
-<TD ALIGN="right"><CODE>"2.3"</CODE></TD>
+<TD ALIGN="right"><CODE>"2.4"</CODE></TD>
 </TR>
 <TR BGCOLOR="white" CLASS="TableRowColor">
 <A NAME="de.looksgood.ani.AniConstants.YOYO"><!-- --></A><TD ALIGN="right"><FONT SIZE="-1">
