@@ -2,12 +2,12 @@
 <!--NewPage-->
 <HTML>
 <HEAD>
-<!-- Generated by javadoc (build 1.6.0_35) on Mon Oct 08 14:46:43 BST 2012 -->
+<!-- Generated by javadoc (build 1.6.0_35) on Fri Oct 19 09:22:16 BST 2012 -->
 <TITLE>
 AniSequence (Javadocs: Ani)
 </TITLE>
 
-<META NAME="date" CONTENT="2012-10-08">
+<META NAME="date" CONTENT="2012-10-19">
 
 <LINK REL ="stylesheet" TYPE="text/css" HREF="../../../stylesheet.css" TITLE="Style">
 
